namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    webhook-validation: enabled
